# Syslog-Server-rust

./: .gitignore  Cargo.toml  README.md  debcargo.toml
src/: main.rs
src/helper/: add_line_file.rs  create_path.rs  mod.rs  print_cmd.rs  write_file.rs
src/helper/config/: config_basic_cmd.rs  config_boot.rs  config_cleanup_log.rs  config_client.rs  config_desktop.rs  config_pam_rsyslog.rs  config_rsyslog_server.rs  mod.rs
src/helper/system/: basic_commands.rs  create_cronjob.rs  create_parent_dir.rs  mod.rs  move_file.rs  script_permission.rs  server_ip.rs  system_helper.rs
src/utils/install/: install_depends.rs
src/utils/menu/: add_log_tools.rs  change_boot_menu.rs  config_server.rs  get_rsyslog_config.rs  mod.rs
