[package]
name = "syslog-server"
version = "0.1.0"
authors = ["Elias Mörz <elias.moerz@mail.de>"]
edition = "2024"

description = "A small automation project to set up a syslog server, which also serves as a playground for Rust."
readme = "README.md"

homepage = "https://github.com/NachtsternBuild/Syslog-Server"
repository = "https://github.com/NachtsternBuild/Syslog-Server"

license = "GPL-3.0"

keywords = ["cli", "tool"]
categories = ["command-line-utilities"]

include = [
    "src/**",
    "LICENSE*",
    "README.md"
]

[[bin]]
name = "syslog-server"
path = "src/main.rs"

[dependencies]

# cli parsing
clap = { version = "4.5", features = ["derive"] }

# logging
log = "0.4"
env_logger = "0.11"

# better errors
anyhow = "1.0"

[features]

default = ["cli"]

cli = []

# example opt features
json = ["serde", "serde_json"]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
optional = true

[profile.release]
opt-level = "z"     # Optimized for the smallest possible file size
lto = true          # Link Time Optimization (removes unused code across crates)
codegen-units = 1   # Prevents parallel compilation, but enables better optimization
panic = "abort"     # Removes the code for stack unwinding (saves a lot of space)
strip = true
